# nu_plugin_plot

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/color_plot/: drawille.rs  mod.rs
src/color_plot/textplots/: mod.rs  scale.rs
