[package]
authors = ["Max Brown"]
description = "Plot graphs in nushell using numerical lists."
repository = "https://github.com/euphrasiologist/nu_plugin_plot"
edition = "2021"
license = "MIT"
name = "nu_plugin_plot"
version = "0.76.0"

[dependencies]
nu-plugin = { version = "0.86.1", path = "../nushell/crates/nu-plugin" }
nu-protocol = { version = "0.86.1", features = ["plugin"], path = "../nushell/crates/nu-protocol" }
owo-colors = "3.5.0"
fnv = "1.0.7"
term_size = "0.3.2"
